src/test/ui/closures/2229_closure_analysis/migrations/macro.stderr
error: changes to closure capture in Rust 2021 will affect drop order
  --> $DIR/macro.rs:10:13
   |
LL |     let _ = || dbg!(a.0);
   |             ^^^^^^^^---^
   |                     |
   |                     in Rust 2018, closure captures all of `a`, but in Rust 2021, it only captures `a.0`
...
LL | }
   | - in Rust 2018, `a` would be dropped here, but in Rust 2021, only `a.0` would be dropped here alongside the closure
   |
note: the lint level is defined here
  --> $DIR/macro.rs:5:9
   |
LL | #![deny(rust_2021_incompatible_closure_captures)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: for more information, see <https://doc.rust-lang.org/nightly/edition-guide/rust-2021/disjoint-capture-in-closures.html>
help: add a dummy let to cause `a` to be fully captured
   |
LL |     let _ = || { let _ = &a; dbg!(a.0) };
   |                ~~~~~~~~~~~~~~~~~~~~~~~~~

error: aborting due to previous error

